// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmLiBankTransaction has the expected html structure 1`] = `
<tmlitransaction-stub
  block="3436"
  color="#215C2F"
  devmode="true"
  time="2042"
/>
`;

exports[`TmLiBankTransaction should show outgoing transactions 1`] = `
<tmlitransaction-stub
  block="3438"
  color="#25293F"
  devmode="true"
  time="2052"
/>
`;

exports[`TmLiBankTransaction should show transactions sent to the sender 1`] = `
<tmlitransaction-stub
  block="466"
  color="#215C2F"
  devmode="true"
  time="1142"
/>
`;
